--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,22 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Forrest" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="Base.Theme.Forrest" parent="Theme.AppCompat.DayNight.DarkActionBar">
 
         <!-- Original AppCompat attributes -->
-        <item name="colorPrimary">@color/primaryColor</item>
-        <item name="colorSecondary">@color/secondaryColor</item>
+        <item name="colorPrimary">@color/indigo</item>
+        <item name="colorSecondary">@color/teal</item>
         <item name="android:colorBackground">@color/white</item>
         <item name="colorError">@color/error</item>
 
         <!-- New MaterialComponents attributes. -->
-
-
         <!-- Primary brand color. -->
-        <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
-        <item name="colorOnPrimary">@color/primaryTextColor</item>
+        <item name="colorPrimaryVariant">@color/indigo_dark</item>
+        <item name="colorOnPrimary">@color/white_text</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondaryVariant">@color/secondaryDarkColor</item>
-        <item name="colorOnSecondary">@color/secondaryTextColor</item>
+        <item name="colorSecondaryVariant">@color/teal_dark</item>
+        <item name="colorOnSecondary">@color/black_text</item>
         <item name="colorSurface">@color/white</item>
         <item name="colorOnBackground">@color/black</item>
         <item name="colorOnError">@color/white</item>
@@ -36,7 +34,41 @@
         <item name="textAppearanceButton">@style/TextAppearance.MaterialComponents.Button</item>
         <item name="textAppearanceOverline">@style/TextAppearance.MaterialComponents.Overline</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
+    </style>
+
+    <style name="Theme.Forrest" parent="Base.Theme.Forrest"/>
+
+    <style name="Theme.Forrest.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Forrest.Welcome" parent="Theme.Forrest.NoActionBar">
+
+        <!-- Original AppCompat attributes -->
+        <item name="colorPrimary">@color/indigo</item>
+        <item name="colorSecondary">@color/teal</item>
+        <item name="android:colorBackground">@color/indigo</item>
+        <item name="colorError">@color/error</item>
+
+        <!-- New MaterialComponents attributes. -->
+
+
+        <!-- Primary brand color. -->
+        <item name="colorPrimaryVariant">@color/indigo_dark</item>
+        <item name="colorOnPrimary">@color/white_text</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondaryVariant">@color/teal_dark</item>
+        <item name="colorOnSecondary">@color/black_text</item>
+        <item name="colorSurface">@color/white</item>
+        <item name="colorOnBackground">@color/white</item>
+        <item name="colorOnError">@color/white</item>
+        <item name="colorOnSurface">@color/black</item>
+        <item name="scrimBackground">@color/mtrl_scrim_color</item>
+
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
     </style>
 
 
