--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,14 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         tools:context=".ui.login.LoginActivity">
 
         <ImageView
@@ -22,7 +19,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/background" />
+            app:srcCompat="@drawable/background"
+            android:contentDescription="@string/man_running_image_desc" />
 
         <TextView
             android:id="@+id/title"
@@ -30,15 +28,16 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="96dp"
             android:fontFamily="@font/roboto"
             android:gravity="center"
             android:text="@string/app_name"
             android:textColor="@android:color/white"
             android:textSize="60sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.14" />
 
         <!--LinearLayout
             android:layout_width="match_parent"
@@ -108,7 +107,7 @@
             android:layout_marginTop="96dp"
             android:layout_marginEnd="24dp"
             android:hint="@string/prompt_email"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:inputType="textEmailAddress"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +122,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
             android:hint="@string/prompt_password"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:imeActionLabel="@string/action_sign_in_short"
             android:imeOptions="actionDone"
             android:inputType="textPassword"
@@ -156,21 +155,22 @@
             android:layout_gravity="bottom|end"
             android:layout_marginStart="36dp"
             android:layout_marginEnd="36dp"
-            android:layout_marginBottom="64dp"
             android:contentDescription="@string/sign_in_facebook_des"
+            android:gravity="center_horizontal"
             android:letterSpacing="0.1"
             android:maxLines="2"
             android:paddingHorizontal="32dp"
             android:paddingVertical="12dp"
             android:text="@string/sign_in_facebook"
-            android:gravity="center_horizontal"
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="12sp"
-            app:backgroundTint="@color/blue_facebook"
+            app:backgroundTint="@color/indigo_facebook"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintVertical_bias="0.85" />
 
         <ProgressBar
             android:id="@+id/loading"
