--- a/app/src/main/res/layout/fragment_countdown.xml
+++ b/app/src/main/res/layout/fragment_countdown.xml
@@ -6,8 +6,12 @@
     tools:context=".ui.countdown.CountdownFragment">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="64sp"
+        android:textStyle="bold"
+        android:layout_gravity="center"
+        android:textColor="@color/indigo"
+        android:text="5" />
 
 </FrameLayout>
