--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -1,13 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.welcome.goal.GoalFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
+    <data>
+
+    </data>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:background="?attr/colorPrimary"
+        android:fitsSystemWindows="true"
+        android:theme="@style/Theme.Forrest.Welcome">
 
-</FrameLayout>
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:elevation="0dp">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppBar"
+                style="@style/Widget.MaterialComponents.Toolbar.Primary"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:title="@string/welcome_title"
+                app:titleTextColor="?attr/colorOnBackground"
+                tools:title="Welcome Ramiro \nSet up your account" />
+        </com.google.android.material.appbar.AppBarLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/info_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Setup your goal"
+                android:textColor="?attr/colorOnBackground"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.15" />
+
+
+            <Button
+                android:id="@+id/frequency_dropdown"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="Daily / Weekly"
+                app:layout_constraintEnd_toEndOf="@+id/info_text"
+                app:layout_constraintStart_toEndOf="@+id/frequency_label"
+                app:layout_constraintTop_toBottomOf="@+id/info_text" />
+
+            <Button
+                android:id="@+id/units_dropdown"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Km / Time"
+                app:layout_constraintEnd_toEndOf="@+id/frequency_dropdown"
+                app:layout_constraintStart_toStartOf="@+id/frequency_dropdown"
+                app:layout_constraintTop_toBottomOf="@+id/frequency_dropdown" />
+
+            <Button
+                android:id="@+id/next_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:text="Next"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <TextView
+                android:id="@+id/frequency_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="48dp"
+                android:labelFor="@id/frequency_dropdown"
+                android:text="Frequency"
+                android:textColor="?attr/colorOnBackground"
+                app:layout_constraintBottom_toBottomOf="@id/frequency_dropdown"
+                app:layout_constraintEnd_toStartOf="@id/frequency_dropdown"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="@+id/info_text"
+                app:layout_constraintTop_toTopOf="@id/frequency_dropdown" />
+
+            <TextView
+                android:id="@+id/units_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="48dp"
+                android:labelFor="@id/frequency_dropdown"
+                android:text="Select units"
+                android:textColor="?attr/colorOnBackground"
+                app:layout_constraintBottom_toBottomOf="@id/units_dropdown"
+                app:layout_constraintEnd_toStartOf="@id/units_dropdown"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="@+id/frequency_label"
+                app:layout_constraintTop_toTopOf="@id/units_dropdown" />
+
+            <Button
+                android:id="@+id/set_goal_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Set Goal"
+                android:textAllCaps="false"
+                app:layout_constraintEnd_toEndOf="@+id/units_dropdown"
+                app:layout_constraintTop_toBottomOf="@+id/units_dropdown" />
+
+            <TextView
+                android:id="@+id/calories_burning_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:textColor="?attr/colorOnBackground"
+                app:layout_constraintBottom_toTopOf="@+id/meal_equivalent_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/set_goal_button"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="You will be burning 100 calories" />
+
+            <TextView
+                android:id="@+id/meal_equivalent_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:textColor="?attr/colorOnBackground"
+                app:layout_constraintBottom_toTopOf="@+id/meal_equivalent_image"
+                app:layout_constraintEnd_toEndOf="@+id/calories_burning_text"
+                app:layout_constraintStart_toStartOf="@+id/calories_burning_text"
+                app:layout_constraintTop_toBottomOf="@+id/calories_burning_text"
+                tools:text="The equivalent to 1 pizza" />
+
+            <ImageView
+                android:id="@+id/meal_equivalent_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_launcher_foreground"
+                app:layout_constraintBottom_toTopOf="@+id/next_button"
+                app:layout_constraintEnd_toEndOf="@+id/meal_equivalent_text"
+                app:layout_constraintStart_toStartOf="@+id/meal_equivalent_text"
+                app:layout_constraintTop_toBottomOf="@+id/meal_equivalent_text" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</layout>
