--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Forrest" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Base.Theme.Forrest" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
 <!--        <item name="colorPrimary">@color/purple_200</item>-->
 <!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
@@ -14,8 +14,8 @@
         <!-- Customize your theme here. -->
 
         <!-- Original AppCompat attributes -->
-        <item name="colorPrimary">@color/primaryColor</item>
-        <item name="colorSecondary">@color/secondaryColor</item>
+        <item name="colorPrimary">@color/indigo</item>
+        <item name="colorSecondary">@color/teal</item>
         <item name="android:colorBackground">@color/white</item>
         <item name="colorError">@color/error</item>
 
@@ -23,11 +23,11 @@
 
 
         <!-- Primary brand color. -->
-        <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
-        <item name="colorOnPrimary">@color/primaryTextColor</item>
+        <item name="colorPrimaryVariant">@color/indigo_dark</item>
+        <item name="colorOnPrimary">@color/white_text</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondaryVariant">@color/secondaryDarkColor</item>
-        <item name="colorOnSecondary">@color/secondaryTextColor</item>
+        <item name="colorSecondaryVariant">@color/teal_dark</item>
+        <item name="colorOnSecondary">@color/black_text</item>
         <item name="colorSurface">@color/white</item>
         <item name="colorOnBackground">@color/black</item>
         <item name="colorOnError">@color/white</item>
