--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -10,14 +10,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.progress.ProgressFragment">
+        tools:context=".ui.home.progress.ProgressFragment">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/horizontal_limit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.35" />
+            app:layout_constraintGuide_percent="0.00" />
+<!--        app:layout_constraintGuide_percent="0.35"-->
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/goal_card_view"
